--- a/App_Data/appSettings-prod.config
+++ b/App_Data/appSettings-prod.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <appSettings>
   <!--Change the Value to the name of your website-->
-  <add key="siteName" value="HSO Security-REHD Metrics"/>
+  <add key="siteName" value="HSO EOM"/>
     
   <!--Change the Values to the user/pass for LDAP service-->
-  <add key="auth.Username" value="hso_metrics" />
+  <add key="auth.Username" value="hso_eom" />
   <add key="auth.Password" value="EIjVSYubyCcsnlLmAjFK" />
 
   <!--For authType use WINDOWS or FORMS or DEV-->
