--- a/App_Data/connectionStrings-prod.config
+++ b/App_Data/connectionStrings-prod.config
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <connectionStrings>
-  <add name="ConnectionString" connectionString="DATA SOURCE=HSOC01P;PASSWORD=BellaK00$;USER ID=HSO_METRICS" providerName="Oracle.DataAccess.Client" />
+  <add name="ConnectionString" connectionString="DATA SOURCE=HSOC01P;PASSWORD=BellaK00$;USER ID=HSO_EOM" providerName="Oracle.DataAccess.Client" />
   <add name="SignOnConnectionString" connectionString="DATA SOURCE=HSOC01P;PASSWORD=BellaK00$;USER ID=hso_signon" providerName="Oracle.DataAccess.Client" />
 </connectionStrings>
