Revert "brightspeed branch"
This reverts commit c053e52da2aa4ff4803361ee20539f9b62a832d8.

--- a/log4net.config
+++ b/log4net.config
@@ -10,7 +10,7 @@
       </layout>
     </appender>
     <appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="App_Data/HSOEOM.log" />
+      <file value="App_Data/HSORehdMetrics.log" />
       <appendToFile value="true" />
       <rollingStyle value="Size" />
       <maxSizeRollBackups value="5" />
