--- a/web.config
+++ b/web.config
@@ -47,4 +47,14 @@
       </authorization>
     </system.web>
   </location>
+  <!--<runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <publisherPolicy apply="no"/>
+        <assemblyIdentity name="Oracle.DataAccess" publicKeyToken="89b483f429c47342"/>
+        <bindingRedirect oldVersion="4.121.2.0" newVersion="4.121.1.0"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>-->
 </configuration>
+<!--ProjectGuid: fbfaca98-dc89-4153-9ea3-6323a6c2c7d3-->
