updated DEC issue
fixed issues where DEC woul;d not calculate

--- a/web.config
+++ b/web.config
@@ -3,8 +3,8 @@
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
-  <appSettings configSource="App_Data\appSettings-dev.config"/>
-  <connectionStrings configSource="App_Data\connectionStrings-dev.config"/>
+  <appSettings configSource="App_Data\appSettings-prod.config"/>
+  <connectionStrings configSource="App_Data\connectionStrings-prod.config"/>
   <log4net configSource="log4net.config"/>
   <system.web>
     <compilation defaultLanguage="C#" targetFramework="4.0" debug="true">
